# Mspm0G3507-ef-agent

./: .gitignore  CHANGELOG.zh-CN.md  CMakeLists.txt  README.md  embedforge.yaml
App/Inc/: app.h  app_button.h
App/Src/: app.c  app_button.c  main.c
BoardDevices/Inc/: board_button.h  board_console.h  board_flash.h  board_imu.h  board_lcd.h  board_led.h  board_optical_flow.h  board_tof.h
BoardDevices/Src/: board_button.c  board_console.c  board_flash.c  board_imu.c  board_lcd.c  board_led.c  board_optical_flow.c  board_tof.c
ChipDrivers/Inc/: lsm6dsr.h  pmw3901.h  st7789.h  w25q128.h
ChipDrivers/Src/: pmw3901.c  st7789.c  vl53l0x.c
Components/Inc/: ef_button.h  ef_component_placeholder.h
Components/Src/: ef_button.c  ef_component_placeholder.c
Drivers/Inc/: ef_can.h  ef_drivers.h  ef_gpio.h  ef_i2c.h  ef_pwm.h  ef_spi.h  ef_uart.h
Drivers/Src/: ef_can_mspm0.c  ef_drivers.c  ef_gpio_mspm0.c  ef_i2c_mspm0.c  ef_pwm_mspm0.c  ef_spi_mspm0.c  ef_uart_mspm0.c
Platform/Inc/: ef_platform.h  ti_msp_dl_config.h
Platform/Src/: ef_platform.c  ti_msp_dl_config.c
Services/Inc/: ef_event.h  ef_log.h  ef_scheduler.h
Services/Src/: ef_event.c  ef_log.c  ef_scheduler.c
cmake/ChipDrivers/Inc/: st7789.h  vl53l0x.h  w25q128.h
cmake/ChipDrivers/Src/: lsm6dsr.c  w25q128.c
doc/: 引脚分配.md
doc/LSM6DSR/: LSM6DSR.md
doc/LSM6DSV16X/: LSM6DSV16X.md
doc/PMW3901/: PMW3901.md
doc/VL5310x/: VL5310X
linker/: mspm0g3507.lds
linker/Platform/Inc/: ef_platform.h  ti_msp_dl_config.h
linker/Platform/Src/: ti_msp_dl_config.c
scripts/: manual_download.sh
